# pypto

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml
.claude/rules/: operator-identity-checks.md  pass-doc-ordering.md  reply-language.md
.claude/skills/incore-profiling/: SKILL.md  dsa_expert_placement_study_v1.json  gen_profiling_case.py  incore_profile.py  prepare_dsa_ablation.py  standalone_compare.py
.claude/skills/weekly-changelog/: SKILL.md
.github/perf_baselines/: qwen3_14b_decode.json
.github/scripts/: perf_guard.py
.github/workflows/: ci.yml  daily_ci.yml
device_scripts/: a5_cost_model_calib.py
docs/: issue2131-l0c-dbc-device-task.md
docs/en/dev/: 03-runtime-dfx.md  04-simulator-trace-cleaning.md  05-runtime-ring-sizing.md  distributed_ops.md
docs/en/user/: 00-getting_started.md  01-language_guide.md  02-operation_reference.md  03-torch_codegen_debug.md
docs/zh-cn/dev/: 03-runtime-dfx.md  04-simulator-trace-cleaning.md  05-runtime-ring-sizing.md  distributed_ops.md  ptoas-op-status.md
docs/zh-cn/user/: 00-getting_started.md  01-language_guide.md  02-operation_reference.md  03-torch_codegen_debug.md
examples/: auto_fuse_chained_matmul.py  auto_fuse_ffn.py  auto_fuse_matmul.py  auto_fuse_pointwise.py  auto_fuse_pointwise_chain.py  auto_fuse_vector_dag.py  hello_world.py
examples/kernels/: 01_elementwise.py  02_fused_ops.py  03_matmul.py  04_concat.py  05_activation.py  06_softmax.py  07_normalization.py  08_assemble.py  09_dyn_valid_shape.py  11_auto_tile_matmul.py  __init__.py
examples/models/: 03_flash_attention.py  04_paged_attention.py  06_paged_attention_dynamic.py  07_paged_attention_multi_config.py  08_llama_mini.py  09_paged_attention_spmd.py
examples/runtime/: distributed_callback.py  multi_program_kv_cache.py
examples/utils/: __init__.py  cross_function_calls.py  error_handling.py  phase_fence_dep_compression.py
include/pypto/codegen/: code_emitter.h  codegen_base.h  codegen_preconditions.h
include/pypto/core/: common.h
include/pypto/ir/: builder.h  core.h  expr.h  function.h  kind_traits.h  op_registry.h  program.h  reinterpret_view_semantics.h  stmt.h  tile_view_semantics.h  type.h  type_inference.h
python/bindings/: CMakeLists.txt
python/bindings/modules/: backend.cpp  codegen.cpp  functor.cpp  ir.cpp  ir_builder.cpp  passes.cpp
python/pypto/backend/: pto_backend.py
python/pypto/debug/: __init__.py  torch_codegen.py
python/pypto/ir/: builder.py  compile.py  compiled_program.py  distributed_compiled_program.py  pass_manager.py
python/pypto/jit/: cache.py  decorator.py  specializer.py
python/pypto/language/: __init__.py  dsl_api.py  optimizations.py  scope.py
python/pypto/pypto_core/: backend.pyi  codegen.pyi  ir.pyi  passes.pyi
python/pypto/runtime/: __init__.py  _dep_gen_capture.py  bench.py  device_runner.py  device_tensor.py  distributed_runner.py  execute_artifact.py  kernel_compiler.py  runner.py  runtime_base.py  task_interface.py  tensor_arg.py  worker.py
python/pypto/tools/: clean_sim_trace.py
src/backend/common/: pto_ops_common.cpp  pto_ops_datamove.cpp  pto_ops_distributed.cpp  pto_ops_elementwise.cpp  pto_ops_shared.cpp  soc.cpp
src/codegen/: code_emitter.cpp  codegen_preconditions.cpp  tensor_op_codegen.cpp
src/codegen/distributed/: distributed_codegen.cpp  distributed_op_registry.cpp  distributed_ops_codegen.cpp  distributed_scalar_expr_codegen.cpp
src/codegen/orchestration/: iter_arg_carry_analyzer.cpp  orchestration_analysis.cpp  orchestration_codegen.cpp
src/codegen/pto/: pto_codegen.cpp  (+1 more)
src/ir/: builder.cpp  expr.cpp  op_registry.cpp  program.cpp  type.cpp
tests/st/: README.md  conftest.py
toolchain/: versions.env
(+636 files in other folders)
